#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-29
2013-04-25 Andy Salnikov
- one additional change needed for new cspad config type

Tag: V00-01-28
2013-04-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-26

Tag: V00-01-27
2013-04-23 Andy Salnikov
- regenerate whole thing from psddldata V00-04-25
- pnccd.FullFramveV1 need some change, no longer needs Config type

Tag: V00-01-26
2013-03-29 Andy Salnikov
- regenerate whole thing from psddldata V00-04-24
- improve support for enum and vlen types

Tag: V00-01-25
2013-03-28 Andy Salnikov
- fixing acqiris schema, adding new schema version for DataDescV1

Tag: V00-01-24
2013-03-27 Andy Salnikov
- add support for EPICS aliases

Tag: V00-01-23
2013-03-27 Andy Salnikov
- fix for cspad2x2 schema

Tag: V00-01-22
2013-03-27 Andy Salnikov
- a bit of refactoring/renaming, no code changes

Tag: V00-01-21
2013-03-26 Andy Salnikov
- fix to cspad schema

Tag: V00-01-20
2013-03-26 Andy Salnikov
- checking Evr mess: in Nov 2012 translator changed silently dataset name
  where EvrDataV3 data is stored (this happend during one big refactoring,
  the change was not intentional)
- as a result we now have EvrDataV3 which can be stored in "evrData" 
  or "data" dataset depending when transtion happened
- replacing generated EvrDataV3 code here with hand-written (adopted from 
  generated) which checks dataset name before reading the data from it

Tag: V00-01-19
2013-03-25 Andy Salnikov
- fix camera frame image reading

Tag: V00-01-18
2013-03-25 Andy Salnikov
- fixing image joining in PNCCD::FullFrame

Tag: V00-01-17
2013-03-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-21
