@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE psddl SYSTEM "psddl.dtd">
+
+<psddl>
+
+    <use file="psddldata/imp.ddl.xml" />
+
+    <package name="Imp">
+    
+        <!-- ========================================================================= -->
+        
+        <h5schema name="Sample" version="0">
+            <tag name="skip-proxy"/>
+            <dataset name="data">
+                <attribute name="channels"/>
+            </dataset>
+        </h5schema>
+        
+        <!-- ========================================================================= -->
+        
+        <h5schema name="LaneStatus" version="0">
+            <tag name="skip-proxy"/>
+            <dataset name="data">
+                <attribute name="linkErrCount" />
+                <attribute name="linkDownCount" />
+                <attribute name="cellErrCount" />
+                <attribute name="rxCount" />
+                <attribute name="locLinked" />
+                <attribute name="remLinked" />
+                <attribute name="zeros" />
+                <attribute name="powersOkay" />
+            </dataset>
+        </h5schema>
+        
+    </package>
+
+</psddl>
