@@ -12,6 +12,11 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 Tag: V00-01-29
+2013-05-15 Andy Salnikov
+- regenerate whole thing from psddldata V00-04-27
+- ne package imp
+
+Tag: V00-01-29
 2013-04-25 Andy Salnikov
 - one additional change needed for new cspad config type
 
